// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formValidation returns proper object (errors) when required fields are not provided 1`] = `
Object {
  "dispositions": false,
  "name": "Please enter a name",
}
`;

exports[`formValidation returns proper object (errors) when wrong values are provided 1`] = `
Object {
  "dispositions": "You must have one or more items in your Disposition List in order to save.",
  "name": "Please enter a name",
}
`;

exports[`formValidation returns proper object when required fields are provided 1`] = `
Object {
  "dispositions": false,
  "name": false,
}
`;
